--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "farzai/promptpay",
-    "description": "PromptPay QR Code Generator",
+    "name": "zenepay/promptpay",
+    "description": "PromptPay QR Code Generator for PHP",
     "keywords": [
         "farzai",
         "promptpay",
@@ -8,7 +8,6 @@
         "qr-code",
         "promptpay-qr"
     ],
-    "homepage": "https://github.com/farzai/promptpay-qr-php",
     "license": "MIT",
     "authors": [
         {
@@ -19,7 +18,7 @@
     "require": {
         "php": "^8.1",
         "endroid/qr-code": "^5.0.0",
-        "symfony/console": "^6.0"
+        "symfony/console": "^6.0|7.0"
     },
     "require-dev": {
         "pestphp/pest": "^2.34.0",
