--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "endroid/qr-code": "^5.0.",
+        "endroid/qr-code": "^5.0",
         "symfony/console": "^6.0|^7.0"
     },
     "require-dev": {
